--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -184,7 +184,7 @@ a:focus {
     background: url(../img/mnt-small.png) no-repeat center center scroll;
     background-size: contain;
     width: auto;
-    height: 200px;
+    height: 150px;
     margin: 25px 0;
 }
 
@@ -297,7 +297,7 @@ a:focus {
 }
 
 #about {
-    background-color: rgba(149,0,26,1);
+    background-color: rgba(143, 54, 57, 1);
 }
 
 .download-section {
@@ -313,18 +313,18 @@ a:focus {
 }
 
 #download {
-    background-color: rgba(149,0,26,1);
+    background-color: rgba(143, 54, 57, 1);
 }
 
 #contact {
-    background-color: rgba(1,37,110,1);  
+    background-color: rgba(21, 40, 69, 1);  
     padding-bottom: 100px; 
 }
 
 #map {
     width: 100%;
     height: 200px;
-    background-color: rgba(1,37,110,1);
+    background-color: rgba(21, 40, 69, 1);
 }
 
 @media(min-width:767px) {
