--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -7,7 +7,8 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 100;
     color: #fff;
     background-color: #000;
 }
@@ -55,7 +56,7 @@ a {
 a:hover,
 a:focus {
     text-decoration: none;
-    color: #eee;
+    color: #bbb;
 }
 
 .light {
@@ -142,9 +143,9 @@ a:focus {
     }
 
     .navbar-custom .navbar-brand .navbar-image {
-        background: url(../img/penn.png) no-repeat center center scroll;
+        background: url(../img/mnt-if-white.png) no-repeat center center scroll;
         background-size: contain;
-        width: 10%;
+        width:20%;
         height: 40px;
         float: left;
         margin: 3px 0 0 15px;
@@ -167,7 +168,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
+    background: url(../img/intro-bg-90.png) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -181,7 +182,7 @@ a:focus {
 }
 
 .intro .intro-body .brand-logo {
-    background: url(../img/mnt-small.png) no-repeat center center scroll;
+    background: url(../img/mnt-if-white.png) no-repeat center center scroll;
     background-size: contain;
     width: auto;
     height: 150px;
@@ -392,12 +393,22 @@ ul.banner-social-buttons {
 }
 
 footer {
-    padding: 50px 0;
+    padding: 100px 0;
+    /*background-color: #fff;*/
+    /*color: #000;*/
+    font-size: 14px;
+}
+
+footer h4 {
+    font-size: 18px;
+    margin: 5px;
 }
 
 footer p {
-    margin: 0;
+    font-size: 14px;   
+    margin: 5px;
 }
+
 
 ::-moz-selection {
     text-shadow: none;
