--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -329,8 +329,30 @@ a:focus {
     -o-background-size: cover;
 }
 
-#crest {
+.snow-section{
+    width: 100%;
+    color: #fff;
+    padding: 100px 0;
+    background: url(../img/snow.jpg) no-repeat center center scroll;
+    background-color: #000;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;   
+}
+
+#crest, #apply {
     padding: 0;
+}
+
+#crest .text-box {
+    background-color: rgba(21,40,69,.9);
+    padding: 60px;
+}
+
+#apply .text-box {
+    background-color: rgba(143,54,57,.9);
+    padding: 60px;   
 }
 
 .red {
