--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -188,7 +188,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/intro-bg-50.png) no-repeat bottom center scroll;
+    background: url(../img/intro-bg-50.jpg) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
