--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -630,13 +630,13 @@ input[type='checkbox'] {
 
   font-weight: bold;
   font-family: monospace;
-  font-size: 1.2rem;
+  font-size: 2.2rem;
   text-transform: uppercase;
   text-align: center;
 
   padding: 1rem;
 
-  color: #A77B0E;
+  color: #fcf8e3;
   background: #FAE042;
 
   cursor: pointer;
