--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -359,8 +359,9 @@ a:focus {
 }
 
 .logos{
-    width:75%;
-    padding: 50
+    width: 100;
+    height: 80;
+    padding: 30
 }
 
 #crest, #apply {
