--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -359,9 +359,8 @@ a:focus {
 }
 
 .logos{
-    width: 100;
-    height: 80;
-    padding: 30
+    max-width: 80%;
+    max-height: 80%;
 }
 
 #crest, #apply {
